added: meta data for thumnails and titles

--- a/shafee azeem.com/index.html
+++ b/shafee azeem.com/index.html
@@ -2,6 +2,22 @@
 <html lang="en">
 
 <head>
+
+    <!-- meta-data -->
+    <meta property="og:title" content="Shafee - Full Stack Developer Portfolio" />
+    <meta property="og:description" content="Check out my portfolio, projects and full stack skills." />
+    <meta property="og:image" content="https://www.shafee.dev/site-preview.png" />
+    <meta property="og:url" content="https://www.shafee.dev/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter support (optional) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Shafee - Full Stack Developer Portfolio" />
+    <meta name="twitter:description" content="Check out my portfolio, projects and full stack skills." />
+    <meta name="twitter:image" content="https://www.shafee.dev/site-preview.png" />
+
+    <!-- meta-data -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shafee | Portfolio</title>
