--- a/shafee azeem.com/index.html
+++ b/shafee azeem.com/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <!-- meta-data -->
-    <meta property="og:title" content="Shafee - Full Stack Developer Portfolio" />
+    <meta property="og:title" content="Shafee - Front END /Full Stack Developer Portfolio" />
     <meta property="og:description" content="Check out my portfolio, projects and full stack skills." />
     <meta property="og:image" content="https://www.shafee.dev/site-preview.png" />
     <meta property="og:url" content="https://www.shafee.dev/" />
@@ -64,7 +64,7 @@
                         class="fab fa-instagram"></i></a>
             </div>
 
-            <div class="resume-div"><a class="resume" target="_blank" href="/resume-folder/Shafee_resume.pdf"
+            <div class="resume-div"><a class="resume" target="_blank" href="/resume-folder/Shafee_J2.pdf"
                     class="resume-download">
                     View my Resume <i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
