fix: reveal function

--- a/shafee azeem.com/index.html
+++ b/shafee azeem.com/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
         <!-- Scrollable section-->
-        <div class="right reveal">
+        <div class="right ">
             <!-- home section-->
 
             <section id="home" class="main reveal">
