--- a/shafee azeem.com/index.html
+++ b/shafee azeem.com/index.html
@@ -75,30 +75,18 @@
 
             <section id="home" class="main reveal">
 
-                <p>I'm Shafee, a frontend engineer with a strong eye for accessible, pixel-perfect interfaces
-                    and clean,
-                    maintainable code. With around <span class="highlighter">8 years</span> of total experience —
-                    including <span class="highlighter">3 years</span> building
-                    real-world
-                    frontend solutions for clients — I specialize in React and modern JavaScript. While frontend
-                    is my
-                    core strength, I’m actively upskilling across the MERN stack by building full-stack projects
-                    like a
-                    Spotify clone.
-                    <br>
-                    <br>
+                <p>I'm Shafee, a frontend engineer who crafts accessible, pixel-perfect interfaces with clean,
+                    maintainable code. I bring 3 years of hands-on experience building real-world frontend solutions
+                    using React and modern JavaScript — and I'm currently deepening my full-stack skills by building
+                    MERN projects like a Live Chat Application.<br><br>
 
-                    My 5 years at Amazon, though in a non-tech role, sharpened my communication skills,
-                    mentoring
-                    ability, and business understanding from both seller and platform perspectives.
-                    <br>
-                    <br>
+                    "Over the last year, I’ve gone all-in on upskilling: building full-stack apps as personal projects,
+                    contributing to open source, and strengthening my grasp of system design and state management.
+                    <a href="#projects" style="text-decoration: none;color:yellow">my projects ⬇️</a>
+                    <br><br>
 
-                    A few years
-                    ago, I
-                    made a conscious decision to return to tech, reigniting my passion for development. I'm now
-                    focused
-                    on growing as an engineer and contributing to teams that value craft, clarity, and impact.
+                    I’m now looking to contribute to a team that values thoughtful engineering, collaboration, and
+                    continuous growth.
 
                 </p>
             </section>
