fix: CSS styling for fonts and reveal effect

--- a/shafee azeem.com/index.html
+++ b/shafee azeem.com/index.html
@@ -85,6 +85,10 @@
                     <a href="#projects" style="text-decoration: none;color:yellow">my projects ⬇️</a>
                     <br><br>
 
+                    I spent 5 years at Amazon as a Selling Partner Support Mentor, where I honed my ability to break
+                    down complex problems, communicate clearly with stakeholders, and mentor others — all skills that
+                    now help me write clean, maintainable code and collaborate effectively as an engineer.
+
                     I’m now looking to contribute to a team that values thoughtful engineering, collaboration, and
                     continuous growth.
 
@@ -101,7 +105,7 @@
                 <!--Amazon exp-->
 
                 <div class="experience-item">
-                    <div class="year">2018 - 2024</div>
+                    <div class="year">2018-2024</div>
                     <div class="experience-details">
                         <h3>AMAZON INDIA LIMITED</h3>
                         <p class="work-title">Senior Seller Support Associate[Mentor]</p>
