fix:routing to #projects

--- a/shafee azeem.com/index.html
+++ b/shafee azeem.com/index.html
@@ -82,7 +82,7 @@
 
                     "Over the last year, I’ve gone all-in on upskilling: building full-stack apps as personal projects,
                     contributing to open source, and strengthening my grasp of system design and state management.
-                    <a href="#projects" style="text-decoration: none;color:yellow">my projects ⬇️</a>
+                    <a class="navigation" href="#projects" style="text-decoration: none;color:yellow">my projects ⬇️</a>
                     <br><br>
 
                     I spent 5 years at Amazon as a Selling Partner Support Mentor, where I honed my ability to break
